# dizzy

./: .dizzy.yaml  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEBASE.md  CONTRIBUTING.md  DEV.md  END.md  ISSUES.md  LICENSE  PLAN.md  PRINCIPALS_COMMANDS.md  PRINCIPALS_EVENTS.md  PROMPT.md  README.md  REFLECT.md  SPECIFICATION.md  TASKS.md  dbdiagram.typ  dizzy_core.mermaid  dizzy_mutators_queries.mermaid  event_loop_emitting.py  example.feat.yaml  feature_models.py  figures.typ  gen_ref_pages.py  generate_linkml_from_feature.py  generate_protocols_from_commands.py  index.html  justfile  mkdocs.yml  models.reqs.md  models.specs.md  objects.inv  prompts.md  prov_command.py  pyproject.toml  queries.reqs.md  (+12 more)
app/dedupe/: PULUMI.md  README.md  dedupe_architecture.mermaid  justfile  pyproject.toml  run_inspect.py  run_mount.py  run_reconcile.py  scan_and_upload.feat.yaml  schema-driven-feature-implementation.play.md  serve_cli.py  st_service.py
app/dedupe/commands/: assign_mount_example.json  batch_example.jsonl  scan_partition_example.json  scan_remaining_partitions.jsonl
app/dedupe/def/: commands.yaml  events.yaml  events.yml  models.yml  mutations.yaml  mutations.yml  policies.d.yaml  procedures.d.yaml  queries.yaml  queries.yml
app/dedupe/deploy/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
app/dedupe/mutations/: append_to_manifest.py  event_record.py  interfaces.py  mount_partition.py
app/dedupe/policies/: interfaces.py  partition_mount_assigned.py
app/dedupe/procedures/: __init__.py  assign_partition_mount.py  inspect_storage.py  interfaces.py  scan_partition.py
app/dedupe/queries/: cas_minio.py  event_queries.py  interfaces.py
app/dedupe/queries/file_scanners/: __init__.py  linux.py
app/dedupe/scan-and-upload/commands/: README.md  inspect_storage.json
app/dedupe/scan-and-upload/def/: commands.yaml  events.yaml  models.yaml  procedures.d.yaml  prov.yaml
app/dedupe/scan-and-upload/policies/: file_item_scanned.py  interfaces.py  partition_mount_assigned.py
app/dedupe/scan-and-upload/procedures/: assign_partition_mount.py  inspect_storage.py  interfaces.py
app/dedupe/scan_and_upload/def/commands/: create_image_priority_manifest.yaml  start_scan.yaml  upload_blob_using_manifest.yaml
app/dedupe/scan_and_upload/def/events/: manifest_upload_started.yaml  priority_manifest_created.yaml  scan_complete.yaml  scan_failed.yaml  scan_item_failed.yaml  scan_item_found.yaml
app/dedupe/tests/snap/: test_scan_partition.py
app/dedupe/tests/vibes/: __init__.py  test_linux_queriers.py
app/dedupe/utils/: generate_mutation_interfaces.py  generate_procedure_contexts.py  generate_query_interfaces.py
app/dedupe/vibes/: __init__.py  event_store.py  event_store_filesystem.py  flow_report.py  minio_upload.py  scan.py  scan_partitions.py  test_cas.py
app/dedupe/working/: add-query-to-procedure.play.md
app/todo/: README.md  justfile  pyproject.toml
app/todo/def/: commands.yaml  events.yaml  models.yaml  mutations.yaml  policies.d.yaml  procedures.d.yaml  queries.yaml
app/todo/procedures/: add_todo.py  complete_todo.py  delete_todo.py  interfaces.py
app/todo/queries/: todo_queries.py
app/todo/todo/procedures/: add_todo.py  complete_todo.py  delete_todo.py  interfaces.py
app/todo/todo/queries/: interfaces.py  todo_queries.py
app/todo/todo/web/: server.py
app/todo/todo/web/static/: index.html
app/todo/web/: server.py
dizzy/: __init__.py  cli.py  command_handler.py  command_queue.py  event_loop.py  example_service.py  pyproject.toml
dizzy/dedupe/: db.py  dedupe.py  domain.py  event_system.py  events.py  instrument_prov.py  listeners.py  test_dag_construction.py  test_map_listener.py
dizzy/docs/adr/: 002-mutations-domain-event-import-patching.md
dizzy/domain/: command_handler.py  command_queue.py  event_system.py  event_system_id.py  example_service.py  query.py
dizzy/fuse/: fuse.py
dizzy/src/: feature_model.py  feature_schema.yaml
dizzy/src/dizzy/: __init__.py  cli.py  config.py  docs_content.md  feat.py  feat_loader.py  feat_schema.py  libconfig_loader.py  libconfig_schema.py  logger.py
dizzy/src/dizzy/def/: events.yaml  feat.yaml  libconfig.yaml  queries.yaml
dizzy/src/dizzy/docs/: authoring.md  cli.md  onboard.md
dizzy/src/dizzy/event_store/: mutations.py  queries.py
dizzy/src/dizzy/generators/: adapters.py  commands.py  context_extras.py  environment.py  events.py  init_emitter.py  lib_python_uv.py  lib_rust_cargo.py  lib_typescript_npm.py  libconfig.py  linkml_runner.py  models.py  paths.py  policies.py  procedures.py  projections.py  queries.py  telemetry.py  type_packages.py  yaml_util.py
dizzy/src/dizzy/simulate/: agent.py  executor.py  session.py  sim_executors.py
dizzy/src/dizzy/utils/: fix_event_types.py  generate_mutation_interfaces.py  generate_policy_contexts.py  generate_query_interfaces.py  patch_mutations_imports.py
dizzy/tagfs/: tagfs.py
dizzy/tests/: conftest.py  test_cli.py  test_config.py  test_feat_loader.py  test_libconfig_loader.py  test_logger.py  test_validation.py
dizzy/tests/__snapshots__/: test_cli.ambr
dizzy/tests/fixtures/: agent.feat.yaml  multiruntime.libconfig.yaml  partial.feat.yaml  recipe.feat.yaml
dizzy/tests/fixtures/def/models/: recipes.yaml
dizzy/tests/generators/: test_adapters.py  test_commands.py  test_environment.py  test_events.py  test_linkml_runner.py  test_models.py  test_policies.py  test_procedures.py  test_projections.py  test_queries.py  test_telemetry.py  test_yaml_util.py
dizzy/tests/generators/__snapshots__/: test_adapters.ambr  test_commands.ambr  test_environment.ambr  test_events.ambr  test_models.ambr  test_policies.ambr  test_procedures.ambr  test_projections.ambr  test_queries.ambr  test_telemetry.ambr
pkg/dizzy/: README.md  pyproject.toml
pkg/dizzy/src/dizzy/: __init__.py  cli.py  st_service.py
pkg/dizzy/src/dizzy/def/: commands.yaml  events.yaml  mutations.yaml
pkg/dizzy/src/dizzy/event_store/: __init__.py  mutations.py
pkg/dizzy/src/dizzy/utils/: __init__.py  fix_event_types.py  generate_policy_contexts.py  mermaid_generator.py  (+3 more)
(+398 files in other folders)
