[project]
name = "dizzy-root"
version = "0.1.0"
description = "Dizzy monorepo root"
requires-python = ">=3.11"
dependencies = [
    "plotext>=5.3.2",
]

[dependency-groups]
dev = [
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
    "mkdocs-publisher>=1.4.8",
    "mkdocstrings[python]>=0.30.1",
]
