[project]
name = "dizzy-root"
version = "0.1.0"
description = "Dizzy monorepo root"
requires-python = ">=3.11"
dependencies = [
    "dizzy",
    "plotext>=5.3.2",
    "xxhash>=3.6.0", # procedure partition_scan
]

[dependency-groups]
dev = [
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "ty>=0.0.1a27",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
    "mkdocs-publisher>=1.4.8",
    "mkdocstrings[python]>=0.30.1",
]

[tool.uv.workspace]
members = [
    "dizzy",
]

[tool.uv.sources]
dizzy = { workspace = true }
