[project]
name = "dizzy"
description = "A methodology and code generator for event-sourced software"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Conrad Mearns", email = "conradmearns@pm.me" }]
keywords = ["event-sourcing", "code-generation", "linkml", "cqrs", "methodology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dynamic = ["version"]
dependencies = [
    "linkml>=1.9.5",
    "openai>=2.42.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "typer>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/PNNL/dizzy"
Repository = "https://github.com/PNNL/dizzy"
Issues = "https://github.com/PNNL/dizzy/issues"

[project.scripts]
dizzy = "dizzy.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "syrupy>=4.0",
    "ruff>=0.9",
    "ty>=0.0.1a27",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "byexample>=11.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Version is derived from git tags (e.g. `v0.2.0`) by hatch-vcs.
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "dizzy/src/dizzy/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["dizzy/src/dizzy"]

[tool.pytest.ini_options]
pythonpath = ["dizzy/src"]
testpaths = ["dizzy/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Generated code is not hand-authored source — regenerate via `just gen-*`.
extend-exclude = [
    "examples/*/lib",
    "dizzy/src/dizzy/_version.py",
    "dizzy/src/dizzy/feat_schema.py",
    "dizzy/src/dizzy/libconfig_schema.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: `typer.Option(...)`/`typer.Argument(...)` in defaults is the Typer idiom.
ignore = ["B008"]

[tool.ty.environment]
extra-paths = ["dizzy/src"]
