[project]
name = "dizzy"
version = "0.1.0"
description = "Dizzy core library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "typer[all]>=0.20.0",
]

[project.scripts]
dizzy = "dizzy.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dizzy"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
