[project]
name = "dedupe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dizzy",
    "linkml>=1.9.4",
    "minio>=7.2.18",
    "pulumi>=3.206.0",
    "pulumi-kubernetes>=4.24.0",
    "pulumi-tailscale>=0.22.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ty>=0.0.1a24",
]

[tool.pytest.ini_options]
pythonpath = "."
markers = [
    "manual: marks tests as manual-only (deselect with '-m \"not manual\"')"
]
addopts = "-m 'not manual'"
