[project]
name = "dedupe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "base58>=2.1.1",
    "blake3>=1.0.8",
    "dizzy",
    "linkml>=1.9.4",
    "minio>=7.2.18",
    "pulumi>=3.206.0",
    "pulumi-kubernetes>=4.24.0",
    "pulumi-tailscale>=0.22.0",
    "pydantic>=2.12.4",
]

[tool.uv.sources]
dizzy = { path = "../../dizzy", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ty>=0.0.1a24",
]

[tool.pytest.ini_options]
pythonpath = "."
markers = [
    "manual: marks tests as manual-only (deselect with '-m \"not manual\"')"
]
addopts = "-m 'not manual'"
