[project]
name = "todo"
version = "0.1.0"
description = "Simple collaborative todo list application using Dizzy framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dizzy",
    "linkml>=1.9.4",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = "."
markers = [
    "manual: marks tests as manual-only (deselect with '-m \"not manual\"')"
]
addopts = "-m 'not manual'"
