[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todo"
version = "0.1.0"
description = "Simple collaborative todo list application using Dizzy framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dizzy",
    "linkml>=1.9.4",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "ty>=0.0.1a26",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
dizzy = { path = "../../dizzy", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

